--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "socket.io": "^2.2.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "xss": "^1.0.3"
   }
 }
